<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="25dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars" />

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:text="@string/my_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:text="@string/my_email"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"/>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:text="@string/references"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/content_article" />

                <TextView
                    android:id="@+id/tv_content_article_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/content_article_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/sqlite_in_android" />

                <TextView
                    android:id="@+id/sqlite_in_android_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/sqlite_in_android_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/nestedscrollview" />

                <TextView
                    android:id="@+id/nestedScrollView_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/sqlite_in_android_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/passing_pojo_in_intent" />

                <TextView
                    android:id="@+id/tv_pojo_intent_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/passing_pojo_in_intent_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/splash_screen" />

                <TextView
                    android:id="@+id/tv_splash_screen_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/splash_screen_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_splash_screen_value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_column="1"
                    android:textColor="@color/black"
                    android:text="@string/splash_screen_2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/hyperlink_textview" />

                <TextView
                    android:id="@+id/tv_hyperlink_textview_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/hyperlink_textview_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_hyperlink_textview_value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_column="1"
                    android:textColor="@color/black"
                    android:text="@string/hyperlink_textview_2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="@string/recyclerview" />

                <TextView
                    android:id="@+id/tv_recyclerview_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/recyclerview_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_recyclerview_value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_column="1"
                    android:textColor="@color/black"
                    android:text="@string/recyclerview_2" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>