<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_language_image_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="25dp">

            <TextView
                android:id="@+id/tv_language_name_detail"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/detail_name" />

            <ImageButton
                android:id="@+id/ib_fav"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toStartOf="@id/ib_share"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@color/transparent"
                android:scaleType="fitXY"
                tools:src="@drawable/like_blank" />

            <ImageButton
                android:id="@+id/ib_share"
                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:rotationY="180"
                android:scaleType="fitXY"
                android:src="@drawable/share" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:text="@string/est_langNumJobs" />

                <TextView
                    android:id="@+id/tv_language_numJobs_detail_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    tools:text="@string/detail_langNumJobs" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0"
                    android:textColor="@color/black"
                    android:text="@string/avgAnnualSalary" />

                <TextView
                    android:id="@+id/tv_language_avgAnnualSalary_detail_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    tools:text="@string/detail_avgAnnualSalary" />

            </TableRow>

        </TableLayout>

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_language_desc_detail"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:lineSpacingMultiplier="1"
            android:layout_gravity="center_vertical|end"
            tools:text="@string/detail_example" />

    </LinearLayout>

</ScrollView>