<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner" />

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:text="@string/judul_artikel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:layout_gravity="center_vertical|end"
            android:text="@string/desc1" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/menurut_pypl"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:layout_gravity="center_vertical|end"
            tools:text="Pada Artikel kali ini, saya akan membahas 10 Bahasa Pemrograman terpopuler di tahun 2020 menurut PYPL Popularity of Programming Language: " />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_row_language"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>